--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@reduxjs/toolkit": "^2.8.2",
     "classnames": "^2.5.1",
     "firebase": "^11.8.1",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-color": "^2.19.3",
